<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip"
    android:paddingBottom="0dip" tools:context="MainActivity"
    android:background="@color/colorPrimary">

	<RelativeLayout
		android:id="@+id/msw_welcome"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_marginStart="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginTop="0dp"
		android:gravity="center_vertical|center_horizontal|center"
		android:visibility="visible"
		tools:ignore="RtlHardcoded">

		<ImageView
			android:id="@+id/msw_logo"
			android:layout_width="275dip"
			android:layout_height="100dip"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:layout_gravity="top"
			android:contentDescription="@string/image_view"
			android:gravity="center_vertical|center_horizontal|center"
			android:src="@raw/front_splash" />

		<TextView
			android:id="@+id/msw_loading_text"
			android:layout_width="match_parent"
			android:layout_height="83dp"
			android:layout_below="@+id/msw_logo"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="-17dp"
			android:gravity="center_vertical|center_horizontal|center"
			android:text="@string/app_name"
			android:textColor="?android:attr/textColorTertiary"
			android:textSize="24sp"
			android:textStyle="normal|bold"
			tools:ignore="NotSibling" />

		<TextView
			android:id="@+id/msw_loading_text2"
			android:layout_width="match_parent"
			android:layout_height="59dp"
			android:layout_below="@+id/msw_logo"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="24dp"
			android:gravity="center_vertical|center_horizontal|center"
			android:text="@string/app_sign"
			android:textColor="?android:attr/textColorTertiary"
			android:textSize="18sp"
			android:textStyle="normal|bold"
			tools:ignore="NotSibling" />

		<TextView
			android:id="@+id/msw_loading_text3"
			android:layout_width="57dp"
			android:layout_height="33dp"
			android:layout_below="@+id/msw_logo"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_marginStart="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginTop="-214dp"
			android:layout_marginEnd="327dp"
			android:gravity="center_vertical|center_horizontal|center"
			android:text="@string/app_version"
			android:textColor="?android:attr/textColorTertiary"
			android:textSize="12sp"
			android:textStyle="normal|italic"
			tools:ignore="NotSibling" />

		<TextView
			android:id="@+id/mgks_web"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_below="@+id/msw_loading_text"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_marginStart="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="0dp"
			android:gravity="center_vertical|center_horizontal|center"
			android:text="@string/mgks_promo"
			android:textColor="?android:attr/textColorTertiary"
			android:textSize="14sp"
			android:textStyle="normal|bold|italic"
			tools:ignore="NotSibling" />
	</RelativeLayout>

	<WebView
		android:id="@+id/msw_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone" />

	<ProgressBar
		android:id="@+id/msw_progress"
		style="@android:style/Widget.ProgressBar.Horizontal"
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:layout_alignParentStart="false"
		android:layout_alignParentLeft="false"
		android:layout_alignParentBottom="false"
		android:progressDrawable="@drawable/progress_style"
		android:visibility="visible" />
</RelativeLayout>
